2006-03-19 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base.c: Fix a crash exposed by bug 335107
	
2006-03-16 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-convert.c: rsvg-convert 'crashes' because it calls g_error()
	on an error condition, instead of fprintf(stderr, ...) (#334813)
	
==== GNOME 2.14 release ====
	
2006-03-11 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.14.2. This will go into GNOME 2.14.
	
2006-03-02 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Depend on newer libcroco for bugfix 333057
	
2006-02-29 Dom Lachowicz <cinamod@hotmail.com>

	* librsvg.def: Fix bug 327855
	
2006-02-28 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.14.1
	
2006-02-28 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-structure.c: Make <svg> elements parse style (bug 332700)
	
2006-02-27 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-text.c: Fix C89 compile error, from Jens Granseuer (bug 332714)
	* rsvg.in: Bug 332798 - rsvg wrapper script doesn't escape shell metacharacters
	
2006-02-26 Dom Lachowicz <cinamod@hotmail.com>	

	* rsvg-styles.c (rsvg_state_inherit_run): Fix inheritence of dash arrays (bug 332699)
	
2006-02-25 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.14.0
	
2006-02-16 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Fix segv when encountering feMergeNode (bug 330928)
	
2006-02-15 Rob Staudinger <robert.staudinger@gmail.com>

	* rsvg-text.c: revert fix #168223, it causes side-effects.

2006-02-15 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-text.c: made text push and pop discrete layers as appropriate - bug #331116

2006-02-10 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo.h: Add G_BEGIN/END_DECLS for C++ protection - bug 330722
	
2006-02-07 Rob Staudinger <robert.staudinger@gmail.com>

	* rsvg-text.c: fix #168223.

2006-02-06 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base.c: Fix C89 conformance (bug 330151), from Jens Granseuer.
	* configure.in: bump version #
	